Updated guide with Gokul and Niranjan Comments

--- a/altair_object_store.ditamap
+++ b/altair_object_store.ditamap
@@ -78,9 +78,9 @@
         <topicref href="topics/install/install_troubleshoot_t.dita"/>
     </topicref>
     <topicref href="topics/get_started/vs_code_integration_r.dita"/>
+    <topicref href="topics/configuration/application_create_r.dita"/>
     <topicref href="topics/configuration/object_store_configuration_t.dita">
         <topicref href="topics/configuration/server_connect_t.dita"/>
-        <topicref href="topics/configuration/application_create_r.dita"/>
         <topicref href="topics/configuration/local_packs_create_t.dita"/>
         <topicref href="topics/configuration/content_definition_t.dita"/>
         <topicref href="topics/configuration/property_create_t.dita"/>
@@ -94,9 +94,11 @@
         </topicref>
         <topicref href="topics/configuration/local_packs_build_deploy_t.dita"/>
     </topicref>
-    <topicref href="topics/object_store_apis/upload_packages_t.dita"/>
-    <topicref href="topics/object_store_apis/content_definition_usage_t.dita"/>
-    <topicref href="topics/application/application_access_t.dita"/>         
+    <topicref href="topics/object_store_apis/apply_access_application_t.dita">
+        <topicref href="topics/object_store_apis/upload_packages_t.dita"/>
+        <topicref href="topics/object_store_apis/content_definition_usage_t.dita"/>
+        <topicref href="topics/application/application_access_t.dita"/>
+    </topicref>         
     
 
     <mapref href="footer.ditamap"/>
